cluster/infrastructure/vault/peer-auth.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: vault-permissive-mtls
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
  mtls:
    mode: PERMISSIVE
