cluster/infrastructure/vault/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: vault-dr
spec:
  host: vault.vault.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
