cluster/infrastructure/vault/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-networkpolicy
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - vault-secrets-operator
      podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - vault-secrets-operator
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: internal-gateway
      podSelector:
        matchLabels:
          app.kubernetes.io/name: internal-gateway
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vault-apply
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: victoria-metrics
    ports:
    - port: 8200
      protocol: TCP
